# swegen-pgx-portal

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: README.md  swegen_pgx_pilot.sites.pass_AF_0.01_filtered.vcf
deploy/: k8s-kth.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
docs/design-notes/: 2026-06-04-public-preview-governance-gap.md
portal/: Dockerfile  __init__.py  app.py  auth.py  email_resend.py  guardian_client.py  kernel.py  kernel_pool.py  requirements.txt  store.py
portal/static/: admin.html  community.html  dashboard.html  index.html  portal.css  portal.js  session.html
tests/: smoke_test.py
